Create buttons and a display for the calculator

--- a/index.html
+++ b/index.html
@@ -8,8 +8,39 @@
 
   <body>
     <script></script>
+    <div class = "calculator">
+      <div class = "display-screen"> Display Screen </div>
+      <div class = "top-buttons"> 
+        <button class = "clear-button">Clear</button>
+        <button class = "delete-button">Delete</button>
+      </div> <!--ends the 'top buttons' div-->
+      <div class = "row1">
+        <button class = "seven"> 7 </button>
+        <button class = "eight"> 8 </button>
+        <button class = "nine"> 9 </button>
+        <button class = "divide"> % </button>
+      </div><!--ends the row1 div-->
+      <div class = "row2">
+        <button class = "four"> 4 </button>
+        <button class = "five"> 5 </button>
+        <button class = "six"> 6 </button>
+        <button class = "multiply"> X </button>
+      </div> <!--ends the row2 div-->
+      <div class = "row3"> 
+        <button class = "one"> 1 </button>
+        <button class = "two"> 2 </button>
+        <button class = "three"> 3 </button>
+        <button class = "subtract"> — </button>
+      </div> <!--ends the row3 div-->
+      <div class = "row4"> 
+        <button class = "decimal"> . </button>
+        <button class = "zero"> 0 </button>
+        <button class = "equals"> = </button>
+        <button class = "plus"> + </button>
+      </div>
 
+    </div> <!--ends the 'calculator' div-->
 
-    <div>Calculator</div>
+    
   </body>
 </html>
