Link the javascript file to the html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <script></script>
+    <script src ="script.js" defer></script>
     <div class = "calculator">
       <div class = "display-screen"> Display Screen </div>
       <div class = "top-buttons"> 
