Change Id tag names of certain elements

--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
   <body>
     <script src ="script.js" defer></script>
     <div class = "calculator">
-      <div class = "display-screen"> Display Screen </div>
+      <div id = "display-screen" class = "display-screen">0</div>
       <div class = "top-buttons"> 
         <button id = "clear-button">Clear</button>
         <button id = "delete-button">Delete</button>
       </div> <!--ends the 'top buttons' div-->
       <div class = "lower-buttons">
         <div class = "row1">
-          <button id = "seven"> 7 </button>
-          <button id = "eight"> 8 </button>
-          <button id = "nine"> 9 </button>
-          <button id = "divide"> % </button>
+          <button id = "seven">7</button>
+          <button id = "eight">8</button>
+          <button id = "nine">9</button>
+          <button id = "divide">/</button>
         </div><!--ends the row1 div-->
         <div class = "row2">
-          <button id = "four"> 4 </button>
-          <button id = "five"> 5 </button>
-          <button id = "six"> 6 </button>
-          <button id = "multiply"> X </button>
+          <button id = "four">4</button>
+          <button id = "five">5</button>
+          <button id = "six">6</button>
+          <button id = "multiply">x</button>
         </div> <!--ends the row2 div-->
         <div class = "row3"> 
-          <button id = "one"> 1 </button>
-          <button id = "two"> 2 </button>
-          <button id = "three"> 3 </button>
-          <button id = "subtract"> — </button>
+          <button id = "one">1</button>
+          <button id = "two">2</button>
+          <button id = "three">3</button>
+          <button id = "subtract">-</button>
         </div> <!--ends the row3 div-->
         <div class = "row4"> 
-          <button id = "decimal"> . </button>
-          <button id = "zero"> 0 </button>
-          <button id = "equals"> = </button>
-          <button id = "plus"> + </button>
+          <button id = "decimal">.</button>
+          <button id = "zero">0</button>
+          <button id = "equals">=</button>
+          <button id = "add">+</button>
         </div>
       </div><!--ends the 'lower buttons' div-->
 
