--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
           <button id = "seven">7</button>
           <button id = "eight">8</button>
           <button id = "nine">9</button>
-          <button id = "divide">/</button>
+          <button id = "divide" class = "operator">/</button>
         </div><!--ends the row1 div-->
         <div class = "row2">
           <button id = "four">4</button>
           <button id = "five">5</button>
           <button id = "six">6</button>
-          <button id = "multiply">x</button>
+          <button id = "multiply" class = "operator">x</button>
         </div> <!--ends the row2 div-->
         <div class = "row3"> 
           <button id = "one">1</button>
           <button id = "two">2</button>
           <button id = "three">3</button>
-          <button id = "subtract">-</button>
+          <button id = "subtract" class = "operator">-</button>
         </div> <!--ends the row3 div-->
         <div class = "row4"> 
           <button id = "decimal">.</button>
           <button id = "zero">0</button>
           <button id = "equals">=</button>
-          <button id = "add">+</button>
+          <button id = "add" class = "operator">+</button>
         </div>
       </div><!--ends the 'lower buttons' div-->
 
