--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div><!--ends the 'lower buttons' div-->
 
     </div> <!--ends the 'calculator' div-->
+    <div class = "footer">Copyright © Cabri 2023</div>
 
     
   </body>
