Center the footer and drop it to the bottom

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div><!--ends the 'lower buttons' div-->
 
     </div> <!--ends the 'calculator' div-->
-    <div class = "footer">Copyright © Cabri 2023</div>
+    <div class = "footer">Copyright © 2023 Cabri</div>
 
     
   </body>
